<resources>
    <string name="app_name">Story App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_a_description">Add a description</string>
    <string name="add_story">Add Story</string>
    <string name="story_name">Story Name</string>
    <string name="story_description">Story Description</string>
    <string name="no_image_selected">no_image_selected</string>

    <string name="signup">Daftar</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="info_login">Sudah siap untuk belajar Coding ?</string>
    <string name="info_register">ayo mulai registrasi dengan isi data anda!</string>
</resources>